Bug 273070 - Crash when changing the application language
Summary: Crash when changing the application language
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Translator Plugin (other bugs)
Version First Reported In: 1.0.80
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 275761 280511 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-11 20:42 UTC by Francesco Marinucci
Modified: 2011-08-26 02:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francesco Marinucci 2011-05-11 20:42:45 UTC
Application: kopete (1.0.80)
KDE Platform Version: 4.6.3 (4.6.3)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-9-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:

I was changing the language of the application, that is setted on Africaans, while i live in Italy.
Anyway, the menus and bars where in italian before i tried to change the language.

The crash can be reproduced every time.

-- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fc805947780 (LWP 2231))]

Thread 3 (Thread 0x7fc7eb543700 (LWP 2233)):
#0  0x00007fc801d7ef03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fc7fcdd7104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc7fcdd79f2 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc7eca7dc44 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007fc7fcdfe3e4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fc7fd69ad8c in start_thread (arg=0x7fc7eb543700) at pthread_create.c:304
#6  0x00007fc801d8c04d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fc7e25ed700 (LWP 2237)):
#0  0xffffffffff60017b in ?? ()
#1  0x00007fc7e25ecae0 in ?? ()
#2  0x00007fff03bff7b2 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 1 (Thread 0x7fc805947780 (LWP 2231)):
[KCrash Handler]
#6  0x00007fc804ffec08 in Kopete::ContactListElement::setPluginData (this=0x41, p=<value optimized out>, key=..., value=...) at ../../../kopete/libkopete/kopetecontactlistelement.cpp:86
#7  0x00007fc7ea91b99d in TranslatorPlugin::slotSetLanguage (this=0xd2b820) at ../../../../kopete/plugins/translator/translatorplugin.cpp:404
#8  0x00007fc7ea91bf34 in TranslatorPlugin::qt_metacall (this=0xd2b820, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff03afece0) at ./translatorplugin.moc:92
#9  0x00007fc8033c45f8 in QMetaObject::activate (sender=0x1189b10, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff03afece0) at kernel/qobject.cpp:3287
#10 0x00007fc803d1dda1 in KSelectAction::triggered (this=<value optimized out>, _t1=28) at ./kselectaction.moc:183
#11 0x00007fc803d1e5ff in KSelectAction::actionTriggered (this=0x1189b10, action=0x1191590) at ../../kdeui/actions/kselectaction.cpp:322
#12 0x00007fc803d1fed5 in KSelectAction::qt_metacall (this=0x1189b10, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fff03afee70) at ./kselectaction.moc:121
#13 0x00007fc8033c45f8 in QMetaObject::activate (sender=0x14a0650, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff03afee70) at kernel/qobject.cpp:3287
#14 0x00007fc8024f5dcf in QActionGroup::triggered (this=<value optimized out>, _t1=0x1191590) at .moc/release-shared/moc_qactiongroup.cpp:146
#15 0x00007fc8024f5e57 in QActionGroupPrivate::_q_actionTriggered (this=<value optimized out>) at kernel/qactiongroup.cpp:93
#16 0x00007fc8024f63f1 in QActionGroup::qt_metacall (this=0x14a0650, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff03afefa0) at .moc/release-shared/moc_qactiongroup.cpp:101
#17 0x00007fc8033c45f8 in QMetaObject::activate (sender=0x1191590, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff03afefa0) at kernel/qobject.cpp:3287
#18 0x00007fc8024f3112 in QAction::triggered (this=<value optimized out>, _t1=true) at .moc/release-shared/moc_qaction.cpp:263
#19 0x00007fc8024f32ff in QAction::activate (this=0x1191590, event=<value optimized out>) at kernel/qaction.cpp:1257
#20 0x00007fc802935303 in QMenuPrivate::activateCausedStack (this=0x11719f0, causedStack=..., action=0x1191590, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:993
#21 0x00007fc80293b2ba in QMenuPrivate::activateAction (this=0x11719f0, action=0x1191590, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1085
#22 0x00007fc803eb77ad in KMenu::mouseReleaseEvent (this=0x117ee00, e=<value optimized out>) at ../../kdeui/widgets/kmenu.cpp:458
#23 0x00007fc80254acb8 in QWidget::event (this=0x117ee00, event=0x7fff03affbd0) at kernel/qwidget.cpp:8259
#24 0x00007fc80293c49b in QMenu::event (this=0x117ee00, e=0x7fff03affbd0) at widgets/qmenu.cpp:2415
#25 0x00007fc8024f99e4 in QApplicationPrivate::notify_helper (this=0xb6fdd0, receiver=0x117ee00, e=0x7fff03affbd0) at kernel/qapplication.cpp:4462
#26 0x00007fc8024fedb3 in QApplication::notify (this=<value optimized out>, receiver=0x117ee00, e=0x7fff03affbd0) at kernel/qapplication.cpp:4023
#27 0x00007fc803df1196 in KApplication::notify (this=0x7fff03b00890, receiver=0x117ee00, event=0x7fff03affbd0) at ../../kdeui/kernel/kapplication.cpp:311
#28 0x00007fc8033af49c in QCoreApplication::notifyInternal (this=0x7fff03b00890, receiver=0x117ee00, event=0x7fff03affbd0) at kernel/qcoreapplication.cpp:731
#29 0x00007fc8024faa0d in sendEvent (receiver=0x117ee00, event=0x7fff03affbd0, alienWidget=0x0, nativeWidget=0x117ee00, buttonDown=0x7fc802fda218, lastMouseReceiver=..., spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#30 QApplicationPrivate::sendMouseEvent (receiver=0x117ee00, event=0x7fff03affbd0, alienWidget=0x0, nativeWidget=0x117ee00, buttonDown=0x7fc802fda218, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3122
#31 0x00007fc80257a854 in QETWidget::translateMouseEvent (this=0x117ee00, event=<value optimized out>) at kernel/qapplication_x11.cpp:4490
#32 0x00007fc80257904a in QApplication::x11ProcessEvent (this=0x7fff03b00890, event=0x7fff03b00520) at kernel/qapplication_x11.cpp:3678
#33 0x00007fc8025a1162 in x11EventSourceDispatch (s=0xb738a0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#34 0x00007fc7fcdd6bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fc7fcdd73a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fc7fcdd7639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007fc8033da3ef in QEventDispatcherGlib::processEvents (this=0xaf5340, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#38 0x00007fc8025a0dfe in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x00007fc8033ae882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#40 0x00007fc8033aeabc in QEventLoop::exec (this=0x7fff03b00820, flags=...) at kernel/qeventloop.cpp:201
#41 0x00007fc8033b2ecb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#42 0x0000000000414a34 in main (argc=1, argv=0x7fff03b01718) at ../../../kopete/kopete/main.cpp:105

Possible duplicates by query: bug 270797.

Reported using DrKonqi
Comment 1 Igor Poboiko 2011-05-25 17:14:16 UTC
SVN commit 1233516 by poboiko:

Fix crash when user is trying to set language from contactlist menubar and no contacts are selected.
Now action is disabled in this case.

BUG: 273070
BUG: 270797


 M  +4 -0      translatorplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1233516
Comment 2 Igor Poboiko 2011-05-25 17:17:09 UTC
This menu entry ("Set Language" from menubar) is used to set language for selected contact and not your language. Your language can be set from plugin settings.
Comment 3 Igor Poboiko 2011-05-25 17:21:10 UTC
SVN commit 1233517 by poboiko:

Backporting commit 1233516.
Fix crash when user is trying to set contacts language from menubar and no contacts are selected.

CCBUG: 273070
CCBUG: 270797


 M  +4 -0      translatorplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1233517
Comment 4 Igor Poboiko 2011-05-25 17:30:02 UTC
Forgot to say: it is used to set language for translator plugin :)
Comment 5 Christoph Feck 2011-08-25 12:43:38 UTC
*** Bug 280511 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2011-08-25 12:44:04 UTC
*** Bug 275761 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2011-08-25 12:46:18 UTC
Igor, did you reopen this bug accidentally, or did the commit not really fix it?
Comment 8 Igor Poboiko 2011-08-25 14:29:52 UTC
This bug should have been fixed with my commit. Looks like it wasn't closed at all. That's strange. I thought bug should be marked as "FIXED" after adding a "BUG:" line to commit message.
Anyway, I'm closing this one as fixed and if it is reproducable for anyone with latest kopete (4.6.4+) then feel free to reopen it.
Comment 9 Christoph Feck 2011-08-26 02:42:07 UTC
Thanks Igor, you reopened it with comment #2, see Bug Activity :)