Fix crash when user is trying to set language from contactlist menubar and no contacts are selected. Now action is disabled in this case.

BUG: 273070
BUG: 270797

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1233516